--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Minato website">
     <meta property="og:description" content="a website where i share my projects, and other things.">
-    <meta property="og:image" content="./assets/images/main.png">
+    <meta property="og:image" content="assets/images/main.png">
     <title>Minato</title>
     <link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/styles.css">
