--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Minato website">
-    <meta property="og:description" content="a website where i share my projects, and other things.">
-    <meta property="og:image" content="assets/images/main.png">
+    <meta property="og:title" content="Minato's website">
+    <meta property="og:description" content="A website where i share my projects, and other things.">
+    <meta property="og:image" content="https://Minato-mba.github.io/assets/images/main.png">
     <title>Minato</title>
     <link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/styles.css">
