--- a/content/downloads.html
+++ b/content/downloads.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/css/download.css" />
     <script src="../assets/js/dwonload.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1144521904849121"
+    crossorigin="anonymous"></script>
   </head>
   <body>
     <audio id="clickSound" src="../assets/sounds/click.mp3" preload="auto"></audio>
     <div class="body">
       <div id="notification-bar">code saved to clipboard</div>
-      <div id="download-container">
-        <div id="download-header">
+      <div id="content-container">
+        <div id="container-header">
           <h1></h1>
         </div>
-        <div class="download-content">
+        <div class="content">
             <div id="generated-code-container" hidden>
                 <div class="text-container">
                     <input id="generated-code" type="text" value="###################" class="uneditable-text" readonly>
