--- a/content/downloads.html
+++ b/content/downloads.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Download Page</title>
     <link rel="icon" href="../assets/images/download-32.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styleiiiiis.css" />
     <link rel="stylesheet" href="../assets/css/download.css" />
     <script src="../assets/js/dwonload.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1144521904849121"
