--- a/content/add_skin_to_replay_mod.html
+++ b/content/add_skin_to_replay_mod.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="Add your own skin to the Replay Mod.">
     <meta property="og:image" content="https://cdn1.iconfinder.com/data/icons/rounded-black-basic-ui/139/Photo_Add-RoundedBlack-512.png">
     <title>Add skin to Replay Mod</title>
-    <link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/css/download.css" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1144521904849121"
