--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1144521904849121"
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous"></script
 </head>
 <body>
     <audio id="clickSound" src="./assets/sounds/click.mp3" preload="auto"></audio>
