--- a/content/9slice.html
+++ b/content/9slice.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nine-Slice Editor</title>
+    <title>Nine-Slice Viewer</title>
     <style>
       /* Import Fonts */
     @font-face {
