--- a/content/9slice.html
+++ b/content/9slice.html
@@ -97,7 +97,7 @@ body {
 
 #jsonOutput pre {
   margin: 0;
-  font-family: MinecraftTen, sans-serif;
+  font-family: Minecraftia, sans-serif;
 }
 
 canvas {
