--- a/content/9slice.html
+++ b/content/9slice.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Preload images -->
+    <link rel="preload" href="../assets/images/input.png" as="image">
+    <link rel="preload" href="../assets/images/tr.png" as="image">
+    <link rel="preload" href="../assets/images/white_button.png" as="image">
+    <link rel="preload" href="../assets/images/white_button_hover.png" as="image">
+    <link rel="preload" href="../assets/images/white_button_active.png" as="image">
+    <link rel="preload" href="../assets/images/dark_button.png" as="image">
+    <link rel="preload" href="../assets/images/dark_button_hover.png" as="image">
+    <link rel="preload" href="../assets/images/dark_button_active.png" as="image">
+    <link rel="preload" href="../assets/images/blue_button.png" as="image">
+    <link rel="preload" href="../assets/images/blue_button_hover.png" as="image">
+    <link rel="preload" href="../assets/images/blue_button_active.png" as="image">
+    <link rel="preload" href="../assets/images/red_button.png" as="image">
+    <link rel="preload" href="../assets/images/red_button_hover.png" as="image">
+    <link rel="preload" href="../assets/images/red_button_active.png" as="image">
+    <link rel="preload" href="../assets/images/upload.png" as="image">
+    
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nine-Slice Viewer</title>
