Update Textures to Glyph.html

--- a/content/Textures to Glyph.html
+++ b/content/Textures to Glyph.html
@@ -16,7 +16,7 @@
   <link rel="apple-touch-icon" sizes="170x170" href="../assets/images/grid_logo_big.png">
   
   <!-- Meta Tags -->
-  <meta name="description" content="Textures to Glyph - Convert Minecraft Textures to Glyphs easily.">
+  <meta name="description" content="Textures to Glyph - Convert Textures to Glyphs easily.">
   <meta name="keywords" content="Minecraft, Texture, Glyph, Converter, Tool">
   <meta name="author" content="@minato4743">
   <meta name="theme-color" content="#1e1e1f">
@@ -26,14 +26,14 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://minato-mba.github.io/content/Textures%20to%20Glyph.html">
   <meta property="og:title" content="Textures to Glyph - Minecraft Texture Converter">
-  <meta property="og:description" content="Convert Minecraft textures to custom glyphs for use in resource packs. Free online tool, no download required.">
+  <meta property="og:description" content="Convert Textures to Glyphs easily.">
   <meta property="og:image" content="https://minato-mba.github.io/assets/images/TTG.png">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://minato-mba.github.io/content/Textures%20to%20Glyph.html">
   <meta name="twitter:title" content="Textures to Glyph - Minecraft Texture Converter">
-  <meta name="twitter:description" content="Convert Minecraft textures to custom glyphs for use in resource packs. Free online tool, no download required.">
+  <meta name="twitter:description" content="Convert Textures to Glyphs easily.">
   <meta name="twitter:image" content="https://minato-mba.github.io/assets/images/TTG_pre.png">
 
   <meta charset="UTF-8" />
