--- a/content/9slice.html
+++ b/content/9slice.html
@@ -417,6 +417,8 @@
       }
     </style>
     <script src="https://cdn.rawgit.com/exif-js/exif-js/master/exif.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6790880772028234"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="notification" style="display: none">JSON copied to clipboard!</div>
