--- a/content/mods/1652-replay-mod.html
+++ b/content/mods/1652-replay-mod.html
@@ -9,7 +9,9 @@
                 <title>Replay Mod [Discontinued]</title>
                 <link rel="stylesheet" href="../../assets/css/styles.css" />
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1144521904849121"crossorigin="anonymous"></script>
-              </head>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6790880772028234"
+     crossorigin="anonymous"></script>
+  </head>
               <body>
                 <audio id="clickSound" src="../../assets/sounds/click.mp3" preload="auto"></audio>
                 <div class="overlay">
