--- a/content/Items to Glyph.html
+++ b/content/Items to Glyph.html
@@ -310,6 +310,8 @@
         }
       }
     </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6790880772028234"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="loading">
