--- a/content/Textures to Glyph.html
+++ b/content/Textures to Glyph.html
@@ -876,7 +876,9 @@
       }
     }
   </style>
-</head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6790880772028234"
+     crossorigin="anonymous"></script>
+  </head>
 
 <body>
 
