--- a/content/add_skin_to_replay_mod.html
+++ b/content/add_skin_to_replay_mod.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../assets/css/download.css" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1144521904849121"
     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6790880772028234"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <audio id="clickSound" src="../assets/sounds/click.mp3" preload="auto"></audio>
