--- a/content/downloads.html
+++ b/content/downloads.html
@@ -10,6 +10,8 @@
     <script src="../assets/js/dwonload.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1144521904849121"
     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6790880772028234"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <audio id="clickSound" src="../assets/sounds/click.mp3" preload="auto"></audio>
